--- a/App.config
+++ b/App.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <connectionStrings>
-    <!--检测间隔时间，请输入时间间隔的纯数字（数字单位为秒，不小于10）-->
-    <add name="timelag" connectionString="10"/>
+    <!--处理间隔时间，请输入时间间隔的纯数字（数字单位为秒，不小于10）-->
+    <add name="timelag" connectionString="20"/>
     <!--检测图片的最小值，请输入图片大小的纯数字（数字单位为KB,不小于1）-->
     <add name="minSize" connectionString="1"/>
     <!--检测图片的最大值，请输入图片大小的纯数字（数字单位为KB）-->
